# advent-of-code-2015

./: Cargo.toml  new_day.sh
day-1-not-quite-lisp/: Cargo.toml
day-1-not-quite-lisp/src/: lib.rs  main.rs
day-1-not-quite-lisp/tests/: tests.rs
day-2-i-was-told-there-would-be-no-math/: Cargo.toml
day-2-i-was-told-there-would-be-no-math/src/: lib.rs  main.rs
day-2-i-was-told-there-would-be-no-math/tests/: tests.rs
day-3-perfectly-spherical-houses-in-a-vacuum/: Cargo.toml
day-3-perfectly-spherical-houses-in-a-vacuum/src/: lib.rs  main.rs
day-3-perfectly-spherical-houses-in-a-vacuum/tests/: tests.rs
day-4-the-ideal-stocking-stuffer/: Cargo.toml
day-4-the-ideal-stocking-stuffer/src/: lib.rs  main.rs
day-4-the-ideal-stocking-stuffer/tests/: tests.rs
day-5-doesn't-he-have-intern-elves-for-this?/: Cargo.toml
day-5-doesn't-he-have-intern-elves-for-this?/src/: lib.rs  main.rs
day-5-doesn't-he-have-intern-elves-for-this?/tests/: tests.rs
day-6-probably-a-fire-hazard/: Cargo.toml
day-6-probably-a-fire-hazard/src/: instruction.rs  lib.rs
day-6-probably-a-fire-hazard/tests/: tests.rs
day-8-matchsticks/src/: lib.rs
day-8-matchsticks/tests/: tests.rs
template/src/: main.rs
template/tests/: tests.rs
