[workspace]
members = [
    "day-1-not-quite-lisp",
    "day-2-i-was-told-there-would-be-no-math",
    "day-3-perfectly-spherical-houses-in-a-vacuum",
    "day-4-the-ideal-stocking-stuffer",
    "day-5-doesn't-he-have-intern-elves-for-this?",
    "day-6-probably-a-fire-hazard",
    "day-8-matchsticks",
]
